error.txt
haris@haris-desktop:~/celestial-nav/build$ cmake --build .
[ 12%] Building CXX object CMakeFiles/celestial_nav.dir/src/main.cpp.o
In file included from /home/haris/celestial-nav/src/user_interface.h:5,
                 from /home/haris/celestial-nav/src/main.cpp:2:
/home/haris/celestial-nav/src/star_matching.h:13:5: error: ISO C++ forbids declaration of ‘StarMatching’ with no type [-fpermissive]
   13 |     StarMatching(const std::vector<ReferenceStarData> &referenceStars, double threshold = 0.5);
      |     ^~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/celestial_nav.dir/build.make:76: CMakeFiles/celestial_nav.dir/src/main.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/celestial_nav.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
haris@haris-desktop:~/celestial-nav/build$ 